index table overflow fixed

--- a/src/styles/style_main.scss
+++ b/src/styles/style_main.scss
@@ -242,7 +242,7 @@ a:hover {
     top: 100%;
     left: 0%;
     width: 50%;
-    height:200%;
+    height:60%;
     background-color:$color_paper;
     display: flex;
     flex-direction: column;
@@ -382,7 +382,7 @@ a:hover {
 .projectContentContainer {
     height: 100%;
     // padding: 2em 4em;
-
+    
     overflow: auto;
 
     p,h1,h2,h3,h4,h5 {
